--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -67,10 +67,10 @@
 		</div>
    <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
+        <div class="sidebar">
            <nav>
 				<asp:Menu ID="Menu1" runat="server" DataSourceID="SiteMapDataSource1" CssClass="nav nav-sidebar" RenderingMode="List"
-                    ItemWrap="True" StaticDisplayLevels="3" IncludeStyleBlock="false" EnableViewState="false" />
+                    ItemWrap="True" StaticDisplayLevels="3" IncludeStyleBlock="false" EnableViewState="false" SkipLinkText="" />
   
                <div class="nav nav-sidebar">
                     <span>Custom editing</span>
@@ -84,7 +84,7 @@
                 <asp:HyperLink ID="HyperLinkProduction" runat="server" Text="Clear cache on production" CssClass="btn btn-info btn-sm" />
             </div>
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="main main-right-bar">
             <asp:contentplaceholder id="MainContent" runat="server" />
         </div>
         <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" SiteMapProvider="AspNetXmlSiteMapProvider" ShowStartingNode="false" />
