--- a/OneMainWeb/adm/css/dashboard.css
+++ b/OneMainWeb/adm/css/dashboard.css
@@ -29,35 +29,29 @@ body {
  * Sidebar
  */
 
-/* Hide for mobile, show later */
 .sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 59px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #E3E2DA;
-    border-right: 1px solid #eee;
-  }
+	position: fixed;
+	top: 50px;
+	bottom: 0;
+	left: 0;
+	z-index: 1000;
+	display: block;
+	padding: 0;
+	overflow-x: hidden;
+	overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+	background-color: #334454;
+	width: 250px;
 }
 
 /* Sidebar navigation */
 .nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
+  margin-right: 0; /* 20px padding + 1px border */
+  margin-bottom: 0;
+  margin-left: 0;
 }
 .nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-right: 0;
+  padding-left: 0;
 }
 .nav-sidebar > .active > a,
 .nav-sidebar > .active > a:hover,
@@ -84,6 +78,10 @@ body {
   margin-top: 0;
 }
 
+.main-right-bar {
+	padding-left: 270px;
+}
+
 
 /*
  * Placeholder dashboard ideas
@@ -104,14 +102,15 @@ body {
   border-radius: 50%;
 }
 
-
+.radio label, .checkbox label {padding-left: 7px; margin-bottom: 20px;}
 
 /*Custom*/
 .title {position: relative; display: block; font-weight: bold; padding: 10px 20px; border-bottom: 1px #ddd solid;}
-.navbar-inverse {background: #20a8d8; color: #FFF;}
+.navbar-inverse {background: #334454; color: #FFF;}
 .navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {color: #FFF;}
 .navbar-nav>li>a {line-height: 21px;}
-.nav>li:nth-child(4)>a, .nav>li:nth-child(4)>a:hover {background-color:#1e8fc6!important;}
+.nav>li:nth-child(3)>a, .nav>li:nth-child(4)>a {background: url('/Res/lleft.gif') repeat-y left top!important; padding-left: 2px;}
+.nav>li:nth-child(3)>a:hover, .nav>li:nth-child(4)>a:hover {background: #2e3d4c url('/Res/lleft.gif') repeat-y left top!important;}
 .tall input[type="text"] {padding: 5px;}
 
 label input {position: relative!important;}
