--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -70,19 +70,19 @@ summary.nolink {text-decoration: none;}
 .input span {display: inline-block; margin-bottom: 5px; font-weight: bold; width: 157px;}
 
 .main table {float: left; width: 100%; margin: 20px 0;}
-.main table tr td, table tr th {padding: 5px;}
+.main table tr td, table tr th {padding: 5px; vertical-align: middle;}
 
-.main tr:nth-child(even) td { background: #e7e7e7; }
+.main tr:nth-child(even) td { background: #f0f0f0; }
 .main tr:nth-child(odd)  td { background: #fafafa; }
-.main tr td { background: #e7e7e7; }
+.main tr td { background: #f0f0f0; }
 .main tr+tr td { background: #fafafa; }
-.main tr+tr+tr td { background: #e7e7e7; }
+.main tr+tr+tr td { background: #f0f0f0; }
 .main tr+tr+tr+tr td { background: #fafafa; }
-.main tr+tr+tr+tr+tr td { background: #e7e7e7; }
+.main tr+tr+tr+tr+tr td { background: #f0f0f0; }
 .main tr+tr+tr+tr+tr+tr td { background: #fafafa; }
 
 .topStructure {display: block; width: 100%; border-top: 4px #9e9e98 solid; float: left; margin: 10px 0; padding: 10px; background-color: #E3E2DA;}
-table tr th {border-top: 4px #9e9e98 solid; margin: 10px; padding: 10px; background-color: #E3E2DA;}
+table tr th {border-top: 4px #9e9e98 solid; margin: 10px; padding: 10px; background-color: #FFF;   border-bottom: 2px solid #ccc!important;}
 
 .level4 {position: relative!important; width: 100%; left: 0!important;}
 
@@ -519,6 +519,7 @@ details .form-group select {width: 100%;}
 .btn-success {background: #8cc051; border-color: #8cc051; border-bottom: 4px #76a83e solid;}
 .btn-danger {background: #e95e4f; border-color: #e95e4f; border-bottom: 4px #d34739 solid;}
 .btn-info, .btn-primary {background: #5cace7; border-color: #5cace7; border-bottom: 4px #4592cb solid;}
+.btn-warning {background: #f1c40f; border-color: #f1c40f; border-bottom: 4px #d8ab00 solid;}
 
 .upDown input {background: #5cace7; color: #FFF; border-color: #5cace7; border-bottom: 4px #4592cb solid; border-top: 0; border-left: 0; border-right: 0; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;}
 
@@ -539,6 +540,36 @@ details .form-group select {width: 100%;}
 
 .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {background: #5cace7!important; border-color: #5cace7!important;}
 .node-selected {background: #5cace7!important;}
-.digits.required {margin-top: 0; padding: 6px 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; border: 1px solid #ccc;}
+.table input[type="text"], .validationGroup input[type="text"], .digits.required {margin-top: 0; padding: 6px 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; border: 1px solid #ccc;}
 
 .table {border: 1px #dddddd solid;}
+.table {
+    border-collapse: separate;
+}
+.table {
+    border: solid #ccc 1px;
+    border-radius: 6px;
+    border-left:0px;
+}
+.table td, .table th {
+    border-left: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+}
+.table th {
+    border-top: none;
+}
+.table th:first-child {
+    border-radius: 6px 0 0 0;
+}
+.table th:last-child {
+    border-radius: 0 6px 0 0;
+}
+.table th:only-child{
+    border-radius: 6px 6px 0 0;
+}
+.table tr:last-child td:first-child {
+    border-radius: 0 0 0 6px;
+}
+.table tr:last-child td:last-child {
+    border-radius: 0 0 6px 0;
+}
