--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -573,3 +573,12 @@ details .form-group select {width: 100%;}
 .table tr:last-child td:last-child {
     border-radius: 0 0 6px 0;
 }
+
+.tabl {display: table;}
+.tabltr {display: table-row;}
+.s1a, .s2a {display: table-cell; vertical-align: top;}
+.s1a {min-width: 280px; padding-right: 20px;}
+
+@media (max-width: 1100px){
+.s1a, .s2a {width: 100%; display: inline-block;}
+}
