--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -461,7 +461,7 @@ div.calendar
 
 .audit-history-table {max-height: 500px; overflow: auto;}
 .ModuleDistinctName { font-size: 11px; font-weight: normal;}
-.m-ops { margin: 3px 0 0 20px; }
+.m-ops { margin: 3px 10px 0 20px; }
 
 .glyphicon-none:before {
     content: "\2122";
@@ -582,3 +582,6 @@ details .form-group select {width: 100%;}
 @media (max-width: 1100px){
 .s1a, .s2a {width: 100%; display: inline-block;}
 }
+
+.bg-primary.distinct-name {margin-left: 10px; background: #e6e6e6; border: 1px #dddddd solid; padding: 7px 10px; color: #333; font-size: 16px; font-weight: bold; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;}
+.bg-primary.distinct-name span {font-size: 11px; font-weight: normal;}
