--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -22,6 +22,7 @@ input[type="radio"], input[type="checkbox"] {float: left; margin: 4px 5px 0 0!im
 input[type="number"]  {width: 70px;}
 
 .s1a .tabs_involved  {border-bottom: 1px #ccc solid; margin-bottom: 10px; padding-bottom: 10px;}
+.file-stucture-menu {min-width: 380px;  padding-right: 20px;}
 
 .s1a {padding: 0;}
 .s2a {padding-right: 0;}
