--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -588,3 +588,5 @@ details .form-group select {width: 100%;}
 
 .bg-primary.distinct-name {margin-left: 10px; background: #e6e6e6; border: 1px #dddddd solid; padding: 7px 10px; color: #333; font-size: 16px; font-weight: bold; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;}
 .bg-primary.distinct-name span {font-size: 11px; font-weight: normal;}
+
+.list-group-item {padding: 4px 5px;}
