show path for copying
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@444 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -592,3 +592,5 @@ details .form-group select {width: 100%;}
 .list-group-item {padding: 4px 5px;}
 .edit-users .radio label, .edit-users .checkbox label {padding-left: 23px;}
 .edit-users .control-label {padding-top: 0!important;}
+
+.hun { width: 100%; }
