scaffold now supports differentiation between - date - time - datetime Because I used a new plugin, please update packages with nuget
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@445 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -594,3 +594,5 @@ details .form-group select {width: 100%;}
 .edit-users .control-label {padding-top: 0!important;}
 
 .hun { width: 100%; }
+
+.input-group { width: 250px; } 
