--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -596,3 +596,6 @@ details .form-group select {width: 100%;}
 .hun { width: 100%; }
 
 .input-group { width: 250px; } 
+
+.glyphicon-sunglasses { color: #8cc051; }
+.glyphicon-asterisk { color: #8cc051; }
