git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@457 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -601,3 +601,7 @@ details .form-group select {width: 100%;}
 .glyphicon-asterisk { color: #8cc051; }
 
 .jumbo-less-padding { padding: 20px !important;}
+
+.modal-lg {
+  width: 90% !important;
+}
