git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@481 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -607,4 +607,4 @@ details .form-group select {width: 100%;}
 }
 
 .checkbox label {position: relative; padding-left: 32px!important;}
-.checkbox label input {position: absolute!important; z-index: 1000000; left: 8px; top: -2px;}
+.checkbox label input {position: absolute!important; z-index: 1000; left: 8px; top: -2px;}
