--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -11,31 +11,14 @@
 
      <asp:Literal runat="server" ID="LiteralHead" EnableViewState="false"></asp:Literal>
 
+    <link href="/adm/css/bootstrap.css" rel="stylesheet"/>
+
 	<style type="text/css">
     	.browser-link { display: block;padding: 4px;padding-top: 110px;background-repeat: no-repeat;background-position: center top;text-decoration: none;text-align: center; }
     	.browser-logos { padding-top: 20px; }
     </style>
-
-    <script>
-        
-        $(function () {
-            trace("%cOne.NET DOM ready.", "color:green; background-color:yellow");
-            $(".nav-sidebar ul li a").each(function () {
-                var anchor = $(this);
-                var attrHref = anchor.attr('href');
-                var url = (typeof attrHref !== typeof undefined && attrHref.length > 0) ? attrHref.trim() : "";
-                if (url == "" || url == "#") {
-                    //unbind the __dopostback
-                    anchor.unbind('click');
-                    anchor.bind('click', function (e) {
-                        e.preventDefault();
-                    });
-                    anchor.addClass('nolink');
-                }
-            });
-        });
-
-    </script>
+    <script type="text/javascript" src="/JavaScript/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="/JavaScript/dropzone/dropzone.min.js"></script>
     <asp:contentplaceholder id="Head" runat="server" />
 </head>
 <body>
@@ -91,7 +74,29 @@
 	 </div>
     </div>
     <script src="/ckeditor4/ckeditor.js"></script>
-    <asp:Literal runat="server" ID="LiteralFoot" EnableViewState="false"></asp:Literal>
+
+
+    <script type="text/javascript" src="/adm/codemirror/codemirror.js"></script>
+    <script type="text/javascript" src="/adm/codemirror/mode/htmlembedded/htmlembedded.js"></script>
+    <script type="text/javascript" src="/adm/codemirror/mode/htmlmixed/htmlmixed.js"></script>
+    <script type="text/javascript" src="/adm/codemirror/mode/javascript/javascript.js"></script>
+    <script type="text/javascript" src="/adm/codemirror/mode/xml/xml.js"></script>
+    <script type="text/javascript" src="/adm/codemirror/mode/css/css.js"></script>
+
+    <script type="text/javascript" src="/JavaScript/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="/JavaScript/jquery.details.js"></script>
+
+    
+    <script type="text/javascript" src="/JavaScript/moment.min.js"></script>
+
+    <script type="text/javascript" src="/JavaScript/bootstrap.js"></script>
+    <script type="text/javascript" src="/JavaScript/bootbox.js"></script>
+    <script type="text/javascript" src="/JavaScript/bootstrap-confirmation.js"></script>
+    <script type="text/javascript" src="/JavaScript/bootstrap-treeview.js"></script>
+    <script type="text/javascript" src="/JavaScript/bootstrap-datetimepicker.min.js"></script>
+
+    <script type="text/javascript" src="/adm/js/one.js"></script>
+
     </form>
 </body>
 </html>
