--- a/OneMainWeb/site_specific/aspx_templates/demo.Master
+++ b/OneMainWeb/site_specific/aspx_templates/demo.Master
@@ -6,7 +6,8 @@
 <!DOCTYPE HTML>
 <html>
 <head runat="server">
-    <Controls:BundleRender ID="BundleRender3" runat="server" Path="~/Bundles/BoostrapCSS" />
+    <link href="/adm/css/bootstrap.css" rel="stylesheet"/>
+
     <Controls:BundleRender ID="BundleRender2" runat="server" Path="~/Bundles/Sass" />
     <Controls:BundleRender ID="BundleRender1" runat="server" Path="~/Bundles/Jquery" IsScript="true" />
     <Controls:JavascriptVars ID="JavascriptVars1" runat="server" />
