--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -18,7 +18,20 @@
     	.browser-logos { padding-top: 20px; }
     </style>
     <script type="text/javascript" src="/JavaScript/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="/JavaScript/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="/JavaScript/jquery-ui.autocomplete.min.js"></script>
+
+    
+
     <script type="text/javascript" src="/JavaScript/dropzone/dropzone.min.js"></script>
+
+
+    <link href="/adm/css/dropzone.min.css" rel="stylesheet"/>
+    <link href="/adm/css/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
+    <link href="/adm/css/one.css" rel="stylesheet"/>
+    <link href="/adm/css/dashboard.css" rel="stylesheet"/>
+    <link href="/adm/codemirror/codemirror.css" rel="stylesheet"/>
+
     <asp:contentplaceholder id="Head" runat="server" />
 </head>
 <body>
@@ -83,7 +96,6 @@
     <script type="text/javascript" src="/adm/codemirror/mode/xml/xml.js"></script>
     <script type="text/javascript" src="/adm/codemirror/mode/css/css.js"></script>
 
-    <script type="text/javascript" src="/JavaScript/jquery.validate.min.js"></script>
     <script type="text/javascript" src="/JavaScript/jquery.details.js"></script>
 
     
