styling mobile version
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@500 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -608,3 +608,10 @@ details .form-group select {width: 100%;}
 
 .checkbox label {position: relative; padding-left: 32px!important;}
 .checkbox label input {position: absolute!important; z-index: 1000; left: 8px; top: -2px;}
+
+@media (max-width: 680px){
+	.sidebar {position: relative!important; top: 10px!important; background-color: transparent!important; padding: 0 20px!important; width: 100%!important;}
+	.main-right-bar {padding: 20px!important;}
+	.s1a {padding: 0!important;}
+	.treeview ul {width: 238px;}
+}
