app version added to one.js and one.css to avoid clear cache on upgrade
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@527 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Account/Account.Master
+++ b/OneMainWeb/Account/Account.Master
@@ -34,7 +34,7 @@
     <script type="text/javascript" src="/JavaScript/bootstrap.js"></script>
     <script type="text/javascript" src="/JavaScript/jquery.details.js"></script>
     <script type="text/javascript" src="/JavaScript/bootstrap-confirmation.js"></script>
-    <script type="text/javascript" src="/adm/js/one.js"></script>
+    <script type="text/javascript" src="/adm/js/one.js?v=<%: AppVersion %>"></script>
 
     
 
