--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -28,7 +28,7 @@
 
     <link href="/adm/css/dropzone.min.css" rel="stylesheet"/>
     <link href="/adm/css/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
-    <link href="/adm/css/one.css" rel="stylesheet"/>
+    <link href="/adm/css/one.css?v=<%: AppVersion %>" rel="stylesheet"/>
     <link href="/adm/css/dashboard.css" rel="stylesheet"/>
     <link href="/adm/codemirror/codemirror.css" rel="stylesheet"/>
 
@@ -47,7 +47,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="/adm"><img src="../res/one-net.png" alt="One.NET" style="float: left;" /><asp:Literal ID="LiteralAppVersion" runat="server" EnableViewState="false"></asp:Literal></a>
+			  <a class="navbar-brand" href="/adm"><img src="../res/one-net.png" alt="One.NET" style="float: left;" /><%: AppVersion %></a>
 			</div>
 			<div class="navbar-collapse collapse">
 			  <ul class="nav navbar-nav navbar-right">
@@ -107,7 +107,7 @@
     <script type="text/javascript" src="/JavaScript/bootstrap-treeview.js"></script>
     <script type="text/javascript" src="/JavaScript/bootstrap-datetimepicker.min.js"></script>
 
-    <script type="text/javascript" src="/adm/js/one.js"></script>
+    <script type="text/javascript" src="/adm/js/one.js?v=<%: AppVersion %>"></script>
 
     </form>
 </body>
