different bug fixes, primarily Forms module now works
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@529 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Account/Account.Master
+++ b/OneMainWeb/Account/Account.Master
@@ -29,7 +29,19 @@
         <asp:ContentPlaceHolder ID="MainContent" runat="server" />
     </div>
     </form>
+    <%-- this code is replicated in One master page !  --%>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
+        ga('create', 'UA-62942900-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
     <script src="/ckeditor4/ckeditor.js"></script>
     <script type="text/javascript" src="/JavaScript/bootstrap.js"></script>
     <script type="text/javascript" src="/JavaScript/jquery.details.js"></script>
