Styled suggestion box
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@580 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/adm/css/one.css
+++ b/OneMainWeb/adm/css/one.css
@@ -622,3 +622,5 @@ details .form-group select {width: 100%;}
     cursor: pointer; cursor: hand;
 }
 
+.ui-autocomplete {background:#FFF; padding: 10px; width: 40%; border: 1px #dddddd solid;  -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;}
+.ui-autocomplete li {margin: 4px 0 4px 20px; cursor: pointer;}
