--- a/OneMainWeb/Account/Account.Master
+++ b/OneMainWeb/Account/Account.Master
@@ -46,6 +46,7 @@
     <script type="text/javascript" src="/JavaScript/bootstrap.js"></script>
     <script type="text/javascript" src="/JavaScript/jquery.details.js"></script>
     <script type="text/javascript" src="/JavaScript/bootstrap-confirmation.js"></script>
+    <script type="text/javascript" src="/JavaScript/ZeroClipboard.min.js"></script>
     <script type="text/javascript" src="/adm/js/one.js?v=<%: AppVersion %>"></script>
 
     
